link customer with province

--- a/src/main/webapp/WEB-INF/views/province/list.html
+++ b/src/main/webapp/WEB-INF/views/province/list.html
@@ -5,7 +5,8 @@
     <title>Provinces</title>
 </head>
 <body>
-<a href="/create-province">Create new province</a>
+<a href="/create-province">Create new province</a><br>
+<a href="/customers">Show customers list</a>
 <h1>Provinces</h1>
 <table border="1">
     <tr>
