--- a/src/main/webapp/WEB-INF/views/customer/list.html
+++ b/src/main/webapp/WEB-INF/views/customer/list.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<a href="/create-customer">Create new customer</a>
+<a href="/create-customer">Create new customer</a><br>
+<a href="/provinces">Show provinces list</a>
 <h1>Customers</h1>
 <table border="1">
     <tr>
